    &#8226; Save and destroy saved searches<br/>
    &#8226; Added picture filter to searches<br/>
    &#8226; Added retweet filter to searches<br/>
    &#8226; RTL support for Android 4.2 and above<br/>
    &#8226; Themers can now theme the action bar<br/>
    &#8226; Some support for ow.ly images in-line<br/>
<br/>
<b>IMPROVED:</b><br/>
    &#8226; Super smooth scrolling optimizations<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Much better image sizing on tweet viewer<br/>
    &#8226; Photo viewer tweeks<br/>
    &#8226; Changed the conversation and discussion style<br/>
    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; Auto-complete of users. Opening their profile will now make them searchable<br/>
    &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
    &#8226; Ability to open retweeters profile when viewing a retweet<br/>
    &#8226; Displaying links on timeline<br/>
    &#8226; Uploading new profile and banner pictures<br/>
    &#8226; Don't blur the banner picture in the drawer. Will have to clear cache for this to take effect<br/>
    &#8226; Displaying and sharing Twitter picture links<br/>
    &#8226; Hashtag muting support, works on mentions now too<br/>
    &#8226; Retweets from Talon Pull in interactions drawer, they now stack on top of each other instead of creating an instance for every new one.<br/>
    &#8226; Theme selection<br/>
    &#8226; A bit larger auto-complete box<br/>
<br/>
<b>FIXES:</b><br/>
    &#8226; Images won't get mixed up between people or tweets anymore<br/>
    &#8226; Images will be full screen when the load on the tweet viewer if you had problems with that<br/>
    &#8226; Action bar not always being set to overlay, so it created a jumpy behavior and big margin at the top<br/>
    &#8226; A little bit better Vine support. Sound is an issue though.<br/>