@@ -538,5 +538,6 @@
     <string name="view_muted_expressions">Remove Muted Expressions</string>
     <string name="no_expression">No Expression!</string>
     <string name="regex_disclaimer">Muting to many expressions may affect startup and refresh times.</string>
+    <string name="cleaning_cache">Cleaning cache...</string>
 
 </resources>
